deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maven
spec:
  replicas: 2
  selector:
    matchLabels:
      app: maven
  template:
    metadata:
      labels:
        app: maven
    spec:
      containers:
      - name: maven
        image: samwang0723/maven:v0.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3004
