deployment/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: maven-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 3004
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: maven-vs
spec:
  hosts:
  - "*"
  gateways:
  - maven-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: maven-service
        port:
          number: 3004
    corsPolicy:
      allowOrigin:
        - '*'
